# TPF-Micromachines

./: .gitignore  .travis.yml  CMakeLists.txt  Client  LuaPlayer  README.md  Server  installation.sh
.github/workflows/: ccpp.yml
client/: Car.cpp  Car.h  Client.cpp  Client.h  GameLoop.cpp  GameLoop.h  GameMap.cpp  GameMap.h  GameRenderer.cpp  GameRenderer.h  Item.cpp  Item.h  LTexture.cpp  LTexture.h  MapManager.cpp  MapManager.h  MapReader.cpp  MapReader.h  RenderThread.cpp  RenderThread.h  SDLStarter.cpp  SDLStarter.h  TEXTURE_ERROR.cpp  TEXTURE_ERROR.h  TextureLoader.cpp  TextureLoader.h  Tile.cpp  Tile.h  a  main.cpp
client/communication/: EventSender.cpp  EventSender.h  Receiver.cpp  Receiver.h  UserInput.cpp  UserInput.h
client/ia/: FakeClient.cpp  FakeClient.h
client/ia/lua/: LuaWrapper.cpp  LuaWrapper.h  fake_player.lua  main.cpp
client/rendering/: GameRenderer.cpp  GameRenderer.h  LTexture.cpp  LTexture.h  SDLStarter.cpp  SDLStarter.h  TEXTURE_ERROR.h  TextureLoader.cpp  TextureLoader.h  VideoRecorder.cpp  VideoRecorder.h
client/rendering/interfaces/: Animation.cpp  Animation.h  Button.cpp  Button.h  ButtonAnswer.cpp  ButtonAnswer.h  Button_answer.cpp  Button_answer.h  CarButton.cpp  CarButton.h  ConnectButton.cpp  ConnectButton.h  DustAnimation.cpp  DustAnimation.h  Explosion.cpp  Explosion.h  Font.cpp  Font.h  LuaButton.cpp  LuaButton.h  MapButton.cpp  MapButton.h  Menu.cpp  Menu.h  StainAnimation.cpp  StainAnimation.h  TextBox.cpp  TextBox.h  TextLabel.cpp  TextLabel.h
client/rendering/recording/: FormatContext.cpp  FormatContext.h  OutputFormat.cpp  OutputFormat.h  VideoRecorder.cpp  VideoRecorder.h  VideoWriter.cpp  VideoWriter.h
client/sound_sys/: SoundSystem.cpp  SoundSystem.h
client/tiles/: Tile.cpp  Tile.h  TilesFactory.cpp  TilesFactory.h
cmake/: FindSDL2.cmake
common/: BaseThread.cpp  BaseThread.h  Event.cpp  Event.h  InfoBlock.cpp  InfoBlock.h  MapsLayer.cpp  MapsLayer.h  Protocol.cpp  Protocol.h  SafeEventQueue.cpp  SafeEventQueue.h  SafeQueue.h  Socket.cpp  Socket.h  Stopwatch.cpp  Stopwatch.h  Thread.cpp  Thread.h  ThreadQueue.cpp  ThreadQueue.h  constants.h
common/conc/: BaseThread.cpp  BaseThread.h  ReceiverThread.cpp  ReceiverThread.h  SenderThread.cpp  SenderThread.h
common/infostream/: InfoBlock.cpp  InfoBlock.h  Protocol.cpp  Protocol.h  Socket.cpp
config/: cars_configuration.yaml  configuration_server.yaml  constants.h  sound_configuration.yaml  tileConstants.h  tilesInfo.yaml
informes/: crearMods.txt  crearScript.txt
lua/: LuaWrapper.cpp  LuaWrapper.h  fake_player.lua  main.cpp
lua53/: LuaLib.cbp
maps/: race_1(test).yaml  race_1.yaml  race_2.yaml  race_4.yaml
plugins/: PluginExample.cpp  PluginLoader.h  PluginOne.cpp  PluginTwo.cpp  comandos.txt  main.cpp
server/: GameObject.cpp  GameObject.h  GameWorld.cpp  GameWorld.h  GamesManager.cpp  GamesManager.h  RaceCar.cpp  Server.cpp  Server.h  Talker.cpp  Talker.h  configuration.cpp  configuration.h  main.cpp
server/Box2D/: CMakeLists.txt
server/Game/: CollisionDetector.cpp  CollisionDetector.h  CollisionsManager.cpp  CollisionsManager.h  Entity.h  GameObject.h  GameWorld.cpp  GameWorld.h  RaceCar.cpp  RaceCar.h  Tile.cpp  Tile.h
server/Game/Box2D/Box2D/Collision/: b2TimeOfImpact.cpp
server/Game/Box2D/Box2D/Common/: b2Settings.h
server/Game/entities/: CarStats.cpp  CarStats.h  Entity.cpp  Entity.h  FinishingLine.cpp  FinishingLine.h  OffRoad.cpp  OffRoad.h  PhysicalRoad.cpp  PhysicalRoad.h  RaceCar.cpp  RaceCar.h
server/Game/entities/items/: ItemBoost.cpp  ItemBoost.h  ItemCreator.cpp  ItemCreator.h  ItemHealth.cpp  ItemHealth.h  ItemMud.cpp  ItemMud.h  ItemOil.cpp  ItemOil.h  ItemRock.cpp  ItemRock.h
server/Game/status_effects/: CallbackStatusEffect.cpp  CallbackStatusEffect.h  DragEffect.cpp  DragEffect.h  HealthEffect.cpp  HealthEffect.h  LapCooldown.h  RedlineCooldown.h  SpeedStatusEffect.cpp  SpeedStatusEffect.h  StatusEffect.cpp  StatusEffect.h
server/config/: Configuration.cpp  Configuration.h  configuration.cpp
server/mods/: Plugin.h  PluginLibrary.cpp  PluginLibrary.h  PluginLoader.cpp  PluginLoader.h  main  main.cpp
server/threads/: ChoosingLobbyThread.cpp  ChoosingLobbyThread.h  GameThread.cpp  GameThread.h  GamesManager.cpp  GamesManager.h  GamesManagerThread.cpp  GamesManagerThread.h  PlayerThread.cpp  PlayerThread.h
tests/: MyTestSuite.h  tests.cpp
tests/mock_yamls/: server_config.yaml
